2005-09-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-prepare-article): Don't
	remove height="nn" in image tags, there's no goal here.

2005-09-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-mime-replace-image-tags): Move the
	code removing height="nn" in image tags back to sb-yomiuri.el.

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-prepare-article): Do.

2005-09-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-redisplay-this-page): Use the cache always.

2005-09-15  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* w3m-search.el (w3m-search-engine-alist): Add "blog-*" entries.

2005-09-02  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* doc/ptexinfmt.el: Support @frenchspacing, @euro, @sansserif.
	(texinfo-format-ordf): Fix typo.

2005-09-01  Hiroshi Fujishima  <hiroshi.fujishima@gmail.com>

	* w3m-search.el (w3m-search-engine-alist): Update goo-ja, waei,
	eiwa, kokugo URL.

2005-08-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ucs.el: Enable XEmacs 21.5-Mule to compile it anyway.

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Improve regexp
	for the shopping group; remove the shopping.ryouhin group.
	(shimbun-asahi-prepare-article): Add a filter for the shopping group.

2005-08-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-anchors): Put the encoded anchor names
	instead of the itself.

2005-08-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Change the
	index page and the regexp for the shopping.kishi group.
	(shimbun-asahi-prepare-article): Change the regexp used to find
	the start of articles for the shopping.kishi group.

2005-08-07  David Hansen  <david.hansen@physik.fu-berlin.de>

	* shimbun/sb-heise.el (shimbun-heise-wash-telepolis-article):
	Remove ads.

2005-08-04  Andreas Seltenreich  <seltenreich@gmx.de>

	* shimbun/sb-zeit-de.el (shimbun-index-url): Fix typo.

2005-08-01  Katsumi Yamaoka  <yamaoka@jpl.org>
